--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="menu">
 			<ul>
-				<li><a id="page_actuelle" href="1 - Accueil.html">Accueil</a></li>
+				<li><a id="page_actuelle" href="index.html">Accueil</a></li>
  				<li><a href="1 - Photographie.html">Photographie</a></li>
  				<li><a href="1 - Vidéo.html">Vidéo</a></li>
  				<li><a href="1 - Photomontage.html">Photomontage</a></li>
