--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 	<head>
 		<link rel="stylesheet" href="personnalisation.css">
+		<link rel="stylesheet" href="flickity.css">
+	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	    <script src="flickity.pkgd.js"></script>
 		<meta charset="utf-8"/>
 		<title>Alvina DR</title>
+
 	</head>
 	<body>
+<!--------------------------------------------------------- MENU ------------------------------------------------------>
 		<div class="menu">
 			<ul>
-				<li><a id="page_actuelle" href="index.html">Accueil</a></li>
+				<li><a id="page_actuelle" href="1 - Accueil.html">Accueil</a></li>
  				<li><a href="1 - Photographie.html">Photographie</a></li>
  				<li><a href="1 - Vidéo.html">Vidéo</a></li>
  				<li><a href="1 - Photomontage.html">Photomontage</a></li>
@@ -16,20 +22,43 @@
  				<li><a href="1 - Contact.html">Contact</a></li>
 			</ul>
 		</div>
+
+<!------------------------------------------------------ ACCUEIL ------------------------------------------------>
 		<div class="bande_accueil">
 			<h1 class="prénom"> Alvina<h1>
 			<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>	
-			<img class="fond_nom" src="FOND NOM.jpg" width="100%" height="75%"/>
+			<img class="fond_nom" src="FOND NOM.jpg" width="100%"/>
 		</div>
-		<div class="présentation">
-			<h3 id="présentation1">Présentation :</h3>
-			<h4 id="présentation1">Je m'appelle Alvina Damasio--Razafiarizaka, j'ai dix-huit ans et je suis passionnée par beaucoup de choses... Je fais de la photographie, du dessin, des montages photos et vidéos, des jeux vidéos, j'écris. Bref, je touche à tout !<h4>
-			<!--img src="Espacement.jpg" width="50%" height=5%/-->
-			<h3 id="présentation2-1">Concours de logo :</h3>
-			<h4 id="présentation2-2"> J'ai participé en 2019 au concours de logo de mon lycée. Il fallait un logo en noir et blanc, contenant les lettres Jay (pour Jay de Beaufort) et un triangle (représentant la verrière en forme de pyramide de l'établissement). Le mien a remporté la première place !</h4>
-			<img id="logo_jay" src="Logo Jay.png" width="30%"/>
-		</div>
-		<div class="fin_de_page">
-		</div>
+
+<!------------------------------------------------------ CARROUSSEL ------------------------------------------------>
+
+<div class="carousel" data-flickity>
+  <!-- foreground parallax layer -->
+    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
+    <div class="carousel-cell"><img src="RESSOURCES/Poster 2 - Falaise.jpg" width="100%" /></div>
+    <div class="carousel-cell"><img src="RESSOURCES/Poster 3 - Rough Landing.jpg" width="100%" /></div>
+    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
+    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
+</div>
+
+<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
+<section class="social_menu">
+	<!------------------ ICONES RÉSEAUX -->
+	<ul>
+    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+  	</ul>
+</section>
+
+<!------------------------------------------------------ FOOTER ------------------------------------------------>
+<footer>
+	<!-------------------- BY ME --------------------------->
+	<div class="by">
+		<p>By Alvina DAMASIO--RAZAFIARIZAKA<p>
+	</div>
+</footer>
+
+<!--------------------------------------------------------------------------------------------------------------->
 	</body>
 </html>
