--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
-    <div class="carousel-cell"><img src="RESSOURCES/Poster 2 - Falaise.jpg" width="100%" /></div>
-    <div class="carousel-cell"><img src="RESSOURCES/Poster 3 - Rough Landing.jpg" width="100%" /></div>
-    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
-    <div class="carousel-cell"><img src="RESSOURCES/Poster 1 - Falaise.jpg" width="100%" /></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P2.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P3.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P4.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P5.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P6.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P7.jpg" width="100%"/></div>
 </div>
 
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
