--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		</div>
 
 <!------------------------------------------------------ ACCUEIL ------------------------------------------------>
+		<img class="fond_nom" src="FOND NOM.jpg" width="100%"/>
 		<div class="bande_accueil">
 			<h1 class="prénom"> Alvina<h1>
 			<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>	
-			<img class="fond_nom" src="FOND NOM.jpg" width="100%"/>
 		</div>
 
 <!------------------------------------------------------ CARROUSSEL ------------------------------------------------>
@@ -57,7 +57,7 @@
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p>By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
 	</div>
 </footer>
 
