--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 	<head>
 		<link rel="stylesheet" href="personnalisation.css">
+		<link rel="icon" href="icon.ico" />
 		<link rel="stylesheet" href="flickity.css">
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
