--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	    <script src="flickity.pkgd.js"></script>
 		<meta charset="utf-8"/>
-		<title>Alvina DR</title>
-
+		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
+		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
+		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 		<div class="menu">
 			<ul>
-				<li><a id="page_actuelle" href="1 - Accueil.html">Accueil</a></li>
+				<li><a id="page_actuelle" href="index.html">Accueil</a></li>
+ 				<li><a href="dut mmi.html">DUT MMI</a></li>
+ 				<li><a href="projets perso.html">Projets Perso</a></li>
  				<li><a href="1 - Photographie.html">Photographie</a></li>
- 				<li><a href="1 - Vidéo.html">Vidéo</a></li>
- 				<li><a href="1 - Photomontage.html">Photomontage</a></li>
  				<li><a href="1 - Rendu 3D.html">Rendu 3D</a></li>
  				<li><a href="1 - Contact.html">Contact</a></li>
 			</ul>
 		</div>
-
 <!------------------------------------------------------ ACCUEIL ------------------------------------------------>
 		<img class="fond_nom" src="FOND NOM.jpg" width="100%"/>
 		<div class="bande_accueil">
@@ -31,18 +31,30 @@
 			<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>	
 		</div>
 
-<!------------------------------------------------------ CARROUSSEL ------------------------------------------------>
+<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
 
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="0 - Photomontages/P1.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P2.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
     <div class="carousel-cell"><img src="0 - Photomontages/P3.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="0 - Photomontages/P4.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="0 - Photomontages/P5.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="0 - Photomontages/P6.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="0 - Photomontages/P7.jpg" width="100%"/></div>
 </div>
+
+<!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------>
+<div class="DUT_MMI_case_title">
+	<h3 class="DUT_MMI_title">DUT MMI</h3>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a> 
+			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a>
+			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
+			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
+</div>
+
 
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
