--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 	<head>
-		<link rel="stylesheet" href="personnalisation.css">
-		<link rel="icon" href="icon.ico" />
-		<link rel="stylesheet" href="flickity.css">
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="flickity.pkgd.js"></script>
 		<meta charset="utf-8"/>
-		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
+		<link rel="icon" href="icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
+
+		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
+
+		<link rel="stylesheet" href="css/personnalisation.css">
+		<link rel="stylesheet" href="css/flickity.css">
+
+	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	    <script src="js/flickity.pkgd.js"></script>
 	</head>
+
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 		<div class="menu">
@@ -25,7 +30,7 @@
 			</ul>
 		</div>
 <!------------------------------------------------------ ACCUEIL ------------------------------------------------>
-		<img class="fond_nom" src="FOND NOM.jpg" width="100%"/>
+		<img class="fond_nom" src="RESSOURCES/FOND NOM.jpg" width="100%"/>
 		<div class="bande_accueil">
 			<h1 class="prénom"> Alvina<h1>
 			<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>	
