--- a/dut mmi.html
+++ b/dut mmi.html
@@ -9,7 +9,7 @@
 
 		<title>Alvina Damasio--Razafiarizaka | DUT MMI</title>
 
-		<link rel="stylesheet" href="personnalisation.css">
+		<link rel="stylesheet" href="css/personnalisation.css">
 		<link rel="stylesheet" href="flickity.css">
 
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
@@ -42,6 +42,25 @@
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Motion Design : Théorie du Petit Monde</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - TIC.jpg"/></a></div>
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Musique : Lo-fi</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Musique.jpg"/></a></div>
 	</div>
+
+	<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
+<section class="social_menu">
+	<!------------------ ICONES RÉSEAUX -->
+	<ul>
+    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+  	</ul>
+</section>
+
+<!------------------------------------------------------ FOOTER ------------------------------------------------>
+<footer>
+	<!-------------------- BY ME --------------------------->
+	<div class="by">
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+	</div>
+</footer>
+
 <!-------------------------------------------------------------------------------------------------------------------------->
 	</body>
 </html>
