--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P3.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P4.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P5.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P6.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="0 - Photomontages/P7.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P3.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P4.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P5.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P7.jpg" width="100%"/></div>
 </div>
 
 <!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------>
