--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
 
-		<link rel="stylesheet" href="css/personnalisation.css">
+		<link rel="stylesheet" href="css/style.css" id="theme-link">
 		<link rel="stylesheet" href="css/flickity.css">
 
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
@@ -21,23 +21,26 @@
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 		<div class="menu">
 			<ul>
-				<li><a id="page_actuelle" href="index.html">Accueil</a></li>
+				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
  				<li><a href="dut mmi.html">DUT MMI</a></li>
- 				<li><a href="projets perso.html">Projets Perso</a></li>
- 				<li><a href="1 - Photographie.html">Photographie</a></li>
- 				<li><a href="1 - Rendu 3D.html">Rendu 3D</a></li>
- 				<li><a href="1 - Contact.html">Contact</a></li>
+ 				<li><a href="projets perso.html">PROJETS PERSO</a></li>
 			</ul>
 		</div>
 <!------------------------------------------------------ ACCUEIL ------------------------------------------------>
-		<img class="fond_nom" src="RESSOURCES/FOND NOM.jpg" width="100%"/>
+		<!--img class="fond_nom" src="RESSOURCES/FOND NOM.jpg" width="100%"/-->
 		<div class="bande_accueil">
-			<h1 class="prénom"> Alvina<h1>
-			<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>	
+			<div class="bande_accueil_gauche">
+				<h1 class="prénom"> Alvina<h1>
+				<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>
+			</div>	
+			<div class="bande_accueil_droite">
+				<img class="couverture" src="RESSOURCES/Poster 1 - Falaise.jpg"/>
+			</div>
 		</div>
-
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-
+<div class="DUT_MMI_case_title">
+	<h3 class="DUT_MMI_title">Projets Perso</h3>
+</div>
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
@@ -59,8 +62,10 @@
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
 </div>
-
-
+<!------------------------------------------------------ Contact ------------------------------------------------>
+<div class="DUT_MMI_case_title">
+	<h3 class="DUT_MMI_title">Contacts</h3>
+</div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
