--- a/dut mmi.html
+++ b/dut mmi.html
@@ -9,7 +9,7 @@
 
 		<title>Alvina Damasio--Razafiarizaka | DUT MMI</title>
 
-		<link rel="stylesheet" href="css/personnalisation.css">
+		<link rel="stylesheet" href="css/style.css" id="theme-link">
 		<link rel="stylesheet" href="flickity.css">
 
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
@@ -19,15 +19,13 @@
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 	<div class="menu">
 			<ul>
-			<li><a href="index.html">Accueil</a></li>
+			<li><a href="index.html">ACCUEIL</a></li>
  			<li><a id="page_actuelle" href="DUT MMI.html">DUT MMI</a></li>
- 			<li><a href="projets perso.html">Projets Perso</a></li>
- 			<li><a href="1 - Photographie.html">Photographie</a></li>
- 			<li><a href="1 - Rendu 3D.html">Rendu 3D</a></li>
- 			<li><a href="1 - Contact.html">Contact</a></li>
+ 			<li><a href="projets perso.html">PROJETS PERSO</a></li>
 		</ul>
 	</div>
 <!--------------------------------------------------- GALERIE PROJETS ------------------------------------------------------>
+
 	<div class="presentation_dut_mmi_case">
 		<p class="presentation_dut_mmi_text">En 2020, j'ai intégré le DUT Métiers du Multimédia et de l'Internet de l'IUT Bordeaux Montaigne. Durant toute l'année nous avons réalisé une foule de projets. Découvrez-les sur cette page !</p>
 	</div>
@@ -37,7 +35,7 @@
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Atelier Scratch</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a></div>
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Web Design : Musée d'Aquitaine</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a></div>
 	</div>
-		<div class="DUT_MMI_case">
+	<div class="DUT_MMI_case">
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Zelda Like</p><a class="DUT_MMI_a" href="DUT MMI.html"><img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a></div>
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Motion Design : Théorie du Petit Monde</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - TIC.jpg"/></a></div>
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Musique : Lo-fi</p><a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Musique.jpg"/></a></div>
