--- a/projets perso.html
+++ b/projets perso.html
@@ -2,26 +2,76 @@
 <html lang="fr">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="personnalisation.css">
 		<link rel="icon" href="icon.ico" />
-		<link rel="stylesheet" href="flickity.css">
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-	    <title>Alvina Damasio--Razafiarizaka | DUT MMI</title>
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
+
+		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
+
+		<link rel="stylesheet" href="css/style.css" id="theme-link">
+		<link rel="stylesheet" href="css/flickity.css">
+
+	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	    <script src="js/flickity.pkgd.js"></script>
+	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-	<div class="menu">
+		<div class="menu">
 			<ul>
-			<li><a href="index.html">Accueil</a></li>
- 			<li><a href="DUT MMI.html">DUT MMI</a></li>
- 			<li><a id="page_actuelle" href="projets perso.html">Projets Perso</a></li>
- 			<li><a href="1 - Photographie.html">Photographie</a></li>
- 			<li><a href="1 - Rendu 3D.html">Rendu 3D</a></li>
- 			<li><a href="1 - Contact.html">Contact</a></li>
-		</ul>
+				<li><a href="index.html">ACCUEIL</a></li>
+ 				<li><a href="dut mmi.html">DUT MMI</a></li>
+ 				<li><a id="page_actuelle" href="projets perso.html">PROJETS PERSO</a></li>
+			</ul>
+		</div>
+
+<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
+
+
+
+<div class="presentation_dut_mmi_case">
+	<p class="presentation_dut_mmi_text">À côté de mes cours j'ai réalisé de nombreux projets personnels. Jetez un coup d'œil !</p>
+</div>
+
+<div class="Section_Projet_case">
+	<h3 class="Section_Projet_title">Photomontages</h3>
+</div>
+
+<div class="carousel" data-flickity>
+  <!-- foreground parallax layer -->
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P3.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P4.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P5.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P7.jpg" width="100%"/></div>
+</div>
+
+<!---------------------------------------------- RENDU 3D ------------------------------------------------>
+
+<div class="Section_Projet_case">
+	<h3 class="Section_Projet_title">Rendu 3D</h3>
+</div>
+<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
+<section class="social_menu">
+	<!------------------ ICONES RÉSEAUX -->
+	<ul>
+    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+  	</ul>
+</section>
+
+<!------------------------------------------------------ FOOTER ------------------------------------------------>
+<footer>
+	<!-------------------- BY ME --------------------------->
+	<div class="by">
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
 	</div>
-<!---------------------
+</footer>
+
+<!--------------------------------------------------------------------------------------------------------------->
+
 	</body>
 </html>
