--- a/i - projets perso.html
+++ b/i - projets perso.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="icon" href="icon.ico" />
 		<meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie"/>
 		<meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
+		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
 		<link rel="stylesheet" href="css/style.css" id="theme-link">
 		<link rel="stylesheet" href="css/flickity.css">
 
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	    <script src="js/flickity.pkgd.js"></script>
+	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
-
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 		<div class="menu">
 			<ul>
-				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
+				<li><a href="index.html">ACCUEIL</a></li>
  				<li><a href="i - dut mmi.html">DUT MMI</a></li>
- 				<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+ 				<li><a id="page_actuelle" href="i - projets perso.html">PROJETS PERSO</a></li>
 			</ul>
 		</div>
-<!------------------------------------------------------ ACCUEIL ------------------------------------------------>
-		<!--img class="fond_nom" src="RESSOURCES/FOND NOM.jpg" width="100%"/-->
-		<div class="bande_accueil">
-			<div class="bande_accueil_gauche">
-				<h1 class="prénom"> Alvina<h1>
-				<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>
-			</div>	
-			<div class="bande_accueil_droite">
-				<img class="couverture" src="RESSOURCES/Poster 1 - Falaise.jpg"/>
-			</div>
-		</div>
+
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">Projets Perso</h3>
+
+
+
+<div class="presentation_dut_mmi_case">
+	<p class="presentation_text">À côté de mes cours j'ai réalisé de nombreux projets personnels. Jetez un coup d'œil !</p>
 </div>
+
+<div class="Section_Projet_case">
+	<h3 class="Section_Projet_title">Photomontages</h3>
+</div>
+
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
@@ -52,19 +48,10 @@
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P7.jpg" width="100%"/></div>
 </div>
 
-<!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">DUT MMI</h3>
-</div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a" href="j - infographie.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a> 
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a>
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
-</div>
-<!------------------------------------------------------ Contact ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">Contacts</h3>
+<!---------------------------------------------- RENDU 3D ------------------------------------------------>
+
+<div class="Section_Projet_case">
+	<h3 class="Section_Projet_title">Rendu 3D</h3>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
@@ -85,5 +72,6 @@
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
+
 	</body>
 </html>
