--- a/j - infographie.html
+++ b/j - infographie.html
@@ -53,10 +53,10 @@
 	</div>
 </div>
 <div class="DUT_MMI_case">
-			<a class="DUT_MMI_a" href="j - infographie.html"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Cover 1.1.png"/></a> 
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Back Cover 1.2.png"/></a>
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Booklet 1.1.png"/></a>
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Cover 1.1.png"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Back Cover 1.2.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Booklet 1.1.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
