--- a/j - infographie.html
+++ b/j - infographie.html
@@ -34,12 +34,12 @@
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 1.5.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 2.1.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 3.2.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 4.1.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 5.1.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/Rendu 6.1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 1.5.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 2.1.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 3.2.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 4.1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 5.1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 6.1.jpg" width="100%"/></div>
 </div>
 
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
@@ -53,9 +53,9 @@
 	</div>
 </div>
 <div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Cover 1.1.png"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Back Cover 1.2.png"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/Booklet 1.1.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/COVER 1.1.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/BOOKLET 1.1.png"/></a>
 			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
