--- a/j - infographie.html
+++ b/j - infographie.html
@@ -58,6 +58,15 @@
 			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/BOOKLET 1.1.png"/></a>
 			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
 </div>
+<div class="row_simple">
+	<div class="column-simple video" id="half">
+		<img class="gallerie_image" src="RESSOURCES/1 - Infographie/RENDU 1.3.jpg"/>
+	</div>
+	<div class="column_simple" id="half">
+		<p class="explication_text">Puis comme il me restait du temps, j'ai aussi réalisé une cover d'album sur le thème d'Assassin's Creed Odyssey.</p>
+		<p class="explication_text">L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.</p>
+	</div>
+</div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
