--- a/i - dut mmi.html
+++ b/i - dut mmi.html
@@ -32,7 +32,7 @@
 
 	<div class="DUT_MMI_case">
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Infographie : Couverture d'Album</p><a class="DUT_MMI_a" href="j - infographie.html"><img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a></div>
-		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Atelier Scratch</p><a class="DUT_MMI_a" href="dut mmi.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a></div>
+		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Jeu vidéo : Atelier Scratch</p><a class="DUT_MMI_a" href="j - scratch.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a></div>
 		<div class="DUT_MMI_image_case"><p class="DUT_MMI_image_titre">Web Design : Musée d'Aquitaine</p><a class="DUT_MMI_a" href="dut mmi.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a></div>
 	</div>
 	<div class="DUT_MMI_case">
