--- a/j - scratch.html
+++ b/j - scratch.html
@@ -28,9 +28,39 @@
 
 <!--------------------------------------------------------- INFOGRAPHIE ------------------------------------------------------>
 <div class="Section_Projet_case">
-	<h3 class="Section_Projet_title">Infographie</h3>
+	<h3 class="Section_Projet_title">Jeu Scratch</h3>
 </div>
 
+
+<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+<div class="row_simple">
+	<div class="column_simple" id="half">
+		<p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe durant la première année du DUT MMI. Il fallait réaliser un jeu vidéo sur Scratch, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique. Nous étions quatre par groupes et ne connaissions encore personne.</p>
+		<p class="explication_text">Après plusieurs heures de brainstorming nous avons décidé avec mon équipe de réaliser un jeu à la "Five Nights at Freddy's". Pour coller au thème qui était "Jamais 203", nous avons décidé de placer le joueur dans sa chambre d'hôtel n°203. Là, il est capable de regarder à travers la ventilation, par la fenêtre et par l'oeillet de la porte. Le but est de survivre toute la nuit sans être attaqué par les monstres qui se rapprochent peu à peu. Pour cela le joueur a plusieurs moyens de les repousser ou de les retenir.</p>
+	</div>
+	<div class="column-simple video" id="half">
+		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Fenetre.gif"/>
+	</div>
+</div>
+<div class="row_simple">
+	<div class="column-simple video" id="half">
+		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Chambre.gif"/>
+	</div>
+	<div class="column_simple" id="half">
+		<p class="explication_text">Le joueur dispose d'une télécommande qui lui permet de contrôler la ventilation (à droite au-dessus du lit) ou de verrouiller la porte (au fond de la pièce). Si la ventilation est en marche, le monstre est bloqué là-bas, si la porte est fermée même chose. Le problème, c'est que pour réaliser ces deux actions, le joueur n'a qu'une quantité d'énergie limitée, une fois épuisée, la ventilation s'arrête et le verrou de la porte s'ouvre.</p>
+		<p class="explication_text">L'une des caratéristiques des monstres qui chassent le joueur est qu'ils se servent du bruit pour se diriger. En appellant la réception avec son téléphone, le joueur pourra donc éloigner ses poursuivants. Mais là encore attention à la batterie, une fois épuisée le portable ne sert plus à rien.</p>
+
+	</div>
+</div>
+<div class="row_simple">
+	<div class="column_simple" id="half">
+		<p class="explication_text">Un autre moyen de les éloigner est de jeter des objets par la fenêtre. Cela fera descendre les monstres vers le parking de l'hôtel. Mais attention à ne pas trop abuser de cette technique, il se peut que les créatures finissent par trouver d'où proviennent les sons.</p>
+		<p class="explication_text">Bref, s'il veut survivre toute la nuit le joueur doit être intelligent dans sa gestion des ressources. Ça c'est le jeu mais côté création c'était comment ?</p>
+	</div>
+	<div class="column-simple video" id="half">
+		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Ventilation.gif"/>
+	</div>
+</div>
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
@@ -42,31 +72,6 @@
     <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 6.1.jpg" width="100%"/></div>
 </div>
 
-<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
-<div class="row_simple">
-	<div class="column_simple" id="half">
-		<p class="explication_text">En début d'année, nous avons eu un atelier d'infographie. Le but était de concevoir une couverture d'album pour le groupe de son choix. J'ai choisi Imagine Dragons et ai décidé de refaire la couverture de leur album "Origins". Pour ce projet, nous devions utiliser Photoshop et Illustrator. J'ai d'abord réalisé l'illustration de ma cover (vidéo à droite), puis je l'ai adapté à des mockups.</p>
-		<p class="explication_text">C'est un atelier que j'ai particulièrement apprécié puisque je réalisais déjà des illustrations du même type durant mon temps libre (voir : <a class="lien" href="i - projets perso.html">Photomontages</a>).</p>
-	</div>
-	<div class="column-simple video" id="half">
-		<iframe width="650" height="400" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
-</div>
-<div class="DUT_MMI_case">
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/COVER 1.1.jpg"/></a> 
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/BOOKLET 1.1.png"/></a>
-			<a class="DUT_MMI_a"> <img class="gallerie_image" src="RESSOURCES/1 - Infographie/CD 1.3.png"/></a>
-</div>
-<div class="row_simple">
-	<div class="column-simple video" id="half">
-		<img class="gallerie_image" src="RESSOURCES/1 - Infographie/RENDU 1.3.jpg"/>
-	</div>
-	<div class="column_simple" id="half">
-		<p class="explication_text">Puis comme il me restait du temps, j'ai aussi réalisé une cover d'album sur le thème d'Assassin's Creed Odyssey.</p>
-		<p class="explication_text">L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.</p>
-	</div>
-</div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
