--- a/i - projets perso.html
+++ b/i - projets perso.html
@@ -45,13 +45,21 @@
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P4.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P5.jpg" width="100%"/></div>
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P7.jpg" width="100%"/></div>
 </div>
 
 <!---------------------------------------------- RENDU 3D ------------------------------------------------>
 
 <div class="Section_Projet_case">
 	<h3 class="Section_Projet_title">Rendu 3D</h3>
+</div>
+<div class="carousel" data-flickity>
+  <!-- foreground parallax layer -->
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P3.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P4.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P5.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
