--- a/i - dut mmi.html
+++ b/i - dut mmi.html
@@ -17,13 +17,18 @@
 
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-	<div class="menu">
-			<ul>
-			<li><a href="index.html">ACCUEIL</a></li>
- 			<li><a id="page_actuelle" href="i - dut mmi.html">DUT MMI</a></li>
- 			<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
-		</ul>
-	</div>
+<div class="navbar">
+	<div class="haut">
+		<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+		<h1 class="prénom">Alvina<h1>
+		<h2 class="nom">Damasio--Razafiarizaka<h2>
+	</div>	
+	<ul>
+		<li><a href="index.html">ACCUEIL</a></li>
+		 <li><a id="page_actuelle" href="i - dut mmi.html">DUT MMI</a></li>
+		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+	</ul>
+</div>
 <!--------------------------------------------------- GALERIE PROJETS ------------------------------------------------------>
 
 	<div class="presentation_dut_mmi_case">
