--- a/index.html
+++ b/index.html
@@ -16,31 +16,30 @@
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	    <script src="js/flickity.pkgd.js"></script>
 	</head>
-
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-		<div class="menu">
+		<div class="navbar">
+			<div class="haut">
+				<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+				<h1 class="prénom">Alvina<h1>
+				<h2 class="nom">Damasio--Razafiarizaka<h2>
+			</div>	
 			<ul>
 				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
  				<li><a href="i - dut mmi.html">DUT MMI</a></li>
  				<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
 			</ul>
 		</div>
-<!------------------------------------------------------ ACCUEIL ------------------------------------------------>
-		<!--img class="fond_nom" src="RESSOURCES/FOND NOM.jpg" width="100%"/-->
-		<div class="bande_accueil">
-			<div class="bande_accueil_gauche">
-				<h1 class="prénom"> Alvina<h1>
-				<h2 class="nom"> DAMASIO--RAZAFIARIZAKA<h2>
-			</div>	
-			<div class="bande_accueil_droite">
-				<img class="couverture" src="RESSOURCES/Poster 1 - Falaise.jpg"/>
-			</div>
+<!------------------------------------------------------ PROJETS ------------------------------------------------>
+
+		<div class="bande_photomontage">
+			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photomontage.jpg"/></a>
+			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_3D.jpg"/></a>
+			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photographie.jpg"/></a>
+			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Jeu_Vidéo.jpg"/></a>
 		</div>
+		
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">Projets Perso</h3>
-</div>
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
@@ -52,18 +51,12 @@
 </div>
 
 <!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">DUT MMI</h3>
-</div>
+
 <div class="DUT_MMI_case">
 			<a class="DUT_MMI_a" href="j - infographie.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a> 
-			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a>
+			<a class="DUT_MMI_a" href="j - scratch.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
-</div>
-<!------------------------------------------------------ Contact ------------------------------------------------>
-<div class="DUT_MMI_case_title">
-	<h3 class="DUT_MMI_title">Contacts</h3>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
