--- a/j - infographie.html
+++ b/j - infographie.html
@@ -18,14 +18,18 @@
 
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-		<div class="menu">
-			<ul>
-				<li><a href="index.html">ACCUEIL</a></li>
- 				<li><a href="i - dut mmi.html">DUT MMI</a></li>
- 				<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
-			</ul>
-		</div>
-
+<div class="navbar">
+	<div class="haut">
+		<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+		<h1 class="prénom">Alvina<h1>
+		<h2 class="nom">Damasio--Razafiarizaka<h2>
+	</div>	
+	<ul>
+		<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
+		 <li><a href="i - dut mmi.html">DUT MMI</a></li>
+		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+	</ul>
+</div>
 <!--------------------------------------------------------- INFOGRAPHIE ------------------------------------------------------>
 <div class="Section_Projet_case">
 	<h3 class="Section_Projet_title">Infographie</h3>
