--- a/i - projets perso.html
+++ b/i - projets perso.html
@@ -17,14 +17,18 @@
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-		<div class="menu">
-			<ul>
-				<li><a href="index.html">ACCUEIL</a></li>
- 				<li><a href="i - dut mmi.html">DUT MMI</a></li>
- 				<li><a id="page_actuelle" href="i - projets perso.html">PROJETS PERSO</a></li>
-			</ul>
-		</div>
-
+<div class="navbar">
+	<div class="haut">
+		<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+		<h1 class="prénom">Alvina<h1>
+		<h2 class="nom">Damasio--Razafiarizaka<h2>
+	</div>	
+	<ul>
+		<li><a href="index.html">ACCUEIL</a></li>
+		<li><a href="i - dut mmi.html">DUT MMI</a></li>
+		<li><a id="page_actuelle" href="i - projets perso.html">PROJETS PERSO</a></li>
+	</ul>
+</div>
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
 
 
@@ -54,13 +58,39 @@
 </div>
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P3.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P4.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P5.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Nasa Milk 1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Araignée.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Voiture.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Nasa Milk 2.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Old.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Tardis.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/0 - 3D/Chambre.jpg" width="100%"/></div>
 </div>
+
+<!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
+<div class="Section_Projet_case">
+	<h3 class="Section_Projet_title">Photographie</h3>
+</div>
+<div class="gallerie">
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I1.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I2.jpg"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I16.jpg"/></a>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I3.jpg"/></a>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I4.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I6.jpg"/></a>
+</div>
+<div class="DUT_MMI_case">
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I7.jpg"/></a> 
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I8.png"/></a>
+			<a class="DUT_MMI_a"> <img class="gallerie_photo" src="RESSOURCES/0 - Photographies/I10.jpg"/></a>
+</div>
+</div>
+
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
