--- a/j - scratch.html
+++ b/j - scratch.html
@@ -18,14 +18,18 @@
 
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-		<div class="menu">
-			<ul>
-				<li><a href="index.html">ACCUEIL</a></li>
- 				<li><a href="i - dut mmi.html">DUT MMI</a></li>
- 				<li><a href="i - projets perso.html">PROJETS PERSO</a></li>
-			</ul>
-		</div>
-
+<div class="navbar">
+	<div class="haut">
+		<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
+		<h1 class="prénom">Alvina<h1>
+		<h2 class="nom">Damasio--Razafiarizaka<h2>
+	</div>	
+	<ul>
+		<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
+		 <li><a href="i - dut mmi.html">DUT MMI</a></li>
+		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+	</ul>
+</div>
 <!--------------------------------------------------------- INFOGRAPHIE ------------------------------------------------------>
 <div class="Section_Projet_case">
 	<h3 class="Section_Projet_title">Jeu Scratch</h3>
@@ -61,14 +65,15 @@
 		<img class="gallerie_image" src="RESSOURCES/2 - Scratch/Animation Ventilation.gif"/>
 	</div>
 </div>
+		<p class="explication_text">Personnellement je me suis occupée de toute la partie design du jeu. Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who (une célèbre série de science-fiction britannique). Après quelques modifications sur différents modèles nous avions les créatures dans plusieurs positions. J'ai réalisé toutes les scènes où se trouverait le joueur puis j'ai conçu des animations pour rendre le jeu plus immersif.</p>
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 1.5.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 2.1.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 3.2.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 4.1.jpg" width="100%"/></div>
-    <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 5.1.jpg" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Ecran titre.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Demo.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/Animation Screamer Couloir.gif" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/SCREAMER CHAMBRE S.png" width="100%"/></div>
+    <div class="carousel-cell"><img src="RESSOURCES/2 - Scratch/SCREAMER FENETRE S.png" width="100%"/></div>
     <div class="carousel-cell"><img src="RESSOURCES/1 - Infographie/RENDU 6.1.jpg" width="100%"/></div>
 </div>
 
