--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
 		</div>
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
-		<div class="bande_photomontage">
+	<div class="present_bande">
+		<div class="present_case1">
+			<p class="present_title">-   GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE   -</p>
+			<p class="present_text">1ère année DUT MMI</p>
+			<p class="present_big">Alvina DR</p>
+		</div>
+			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
+			<img class="scroll_down" src="RESSOURCES/scroll_down.png"/>
+	</div>
+		<div class="photomontage_bande">
 			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photomontage.jpg"/></a>
 			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_3D.jpg"/></a>
 			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photographie.jpg"/></a>
