--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="present_bande">
 		<div class="present_case1">
 			<p class="present_title">-   GRAPHISME, JEU VIDÉO ET CRÉATION D'HISTOIRE   -</p>
-			<p class="present_text">1ère année DUT MMI</p>
+			<p class="present_text"><span class="contour"> | </span> 1ère année DUT MMI <span class="contour"> | </span></p>
 			<p class="present_big">Alvina DR</p>
 		</div>
 			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
