--- a/index.html
+++ b/index.html
@@ -39,13 +39,32 @@
 			<p class="present_big">Alvina DR</p>
 		</div>
 			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
-			<img class="scroll_down" src="RESSOURCES/scroll_down.png"/>
+			<img class="scroll_down" src="./RESSOURCES/scroll_down.png"/>
 	</div>
 		<div class="photomontage_bande">
-			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photomontage.jpg"/></a>
-			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_3D.jpg"/></a>
-			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Photographie.jpg"/></a>
-			 <a class="lien_image" href="i - dut mmi.html"><img class="couverture" src="RESSOURCES/Couverture_Jeu_Vidéo.jpg"/></a>
+			<a class="lien_image" href="./html/photomontage.html">
+				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"/>
+				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGES<span class="contour"> | </span></p>
+			</a>
+			 <a class="lien_image" href="i - dut mmi.html">
+				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"/>
+				 <p class="category_title"><span class="contour"> | </span>3D<span class="contour"> | </span></p>
+			</a>
+			 <a class="lien_image" href="./html/photographie.html">
+				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
+				<p class="category_title"><span class="contour"> | </span>PHOTOGRAPHIE<span class="contour"> | </span></p>
+			</a>
+			<a class="lien_image" href="i - dut mmi.html">
+				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
+				 <p class="category_title"><span class="contour"> | </span>JEU VIDÉO<span class="contour"> | </span></p>
+			</a>
+			<a class="lien_image" href="./html/photographie.html">
+				<img class="couverture" src="./RESSOURCES/Couverture_Photographie.jpg"/>
+				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
+			</a>
+			<a class="lien_image" href="i - dut mmi.html">
+				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
+			</a>
 		</div>
 		
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
@@ -59,7 +78,7 @@
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
 </div>
 
-<!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------>
+<!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------
 
 <div class="DUT_MMI_case">
 			<a class="DUT_MMI_a" href="j - infographie.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a> 
@@ -67,7 +86,7 @@
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
 </div>
-<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
+------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
 	<!------------------ ICONES RÉSEAUX -->
 	<ul>
