ajout images photomontage

--- a/html/photographie.html
+++ b/html/photographie.html
@@ -32,7 +32,7 @@
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
 
 <div class="presentation_dut_mmi_case">
-	<p class="presentation_text">Voilà quelques photos que j'ai prise. Voir à travers l'oeil </p>
+	<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
 </div>
 
 
