--- a/html/photomontage.html
+++ b/html/photomontage.html
@@ -45,6 +45,8 @@
     <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P4.jpg"/>
     <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P5.jpg"/>
     <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P6.jpg"/>
+    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P7.jpg"/>
+    <img class="photomontage_image" src="../RESSOURCES/0 - Photomontages/P8.jpg"/>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
 <section class="social_menu">
