--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 			</a>
 		</div>
 		
-<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
+<!---------------------------------------------- CARROUSSEL PHOTOMONTAGES -------------------------------------------------
 <div class="carousel" data-flickity>
-  <!-- foreground parallax layer -->
+  !-- foreground parallax layer --
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P1.jpg" width="100%" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/></div>
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P2.jpg" width="100%" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/></div>
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P3.jpg" width="100%"/></div>
@@ -78,7 +78,7 @@
     <div class="carousel-cell"><img src="RESSOURCES/0 - Photomontages/P6.jpg" width="100%"/></div>
 </div>
 
-<!----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------
+----------------------------------------------------- PROJETS DUT MMI ------------------------------------------------
 
 <div class="DUT_MMI_case">
 			<a class="DUT_MMI_a" href="j - infographie.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Cover Album.jpg"/></a> 
@@ -86,9 +86,9 @@
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
 </div>
------------------------------------------------------- RÉSEAUX SOCIAUX ------------------------------------------------>
+------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------
 <section class="social_menu">
-	<!------------------ ICONES RÉSEAUX -->
+	------------------ ICONES RÉSEAUX --
 	<ul>
     	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
     	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
@@ -96,7 +96,7 @@
   	</ul>
 </section>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------>
+------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
