--- a/html/photomontage.html
+++ b/html/photomontage.html
@@ -20,7 +20,7 @@
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 <div class="navbar">
 	<div class="haut">
-		<a class="icone" href="index.html"> <img  src="../RESSOURCES/a.png" width="100%"/></a>
+		<a class="icone" href="../index.html"> <img  src="../RESSOURCES/a.png" width="100%"/></a>
 		<h1 class="prénom">Alvina<h1>
 		<h2 class="nom">Damasio--Razafiarizaka<h2>
 	</div>	
