--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 				<p class="category_title"><span class="contour"> | </span>VIDÉOS<span class="contour"> | </span></p>
 			</a>
 			<a class="lien_image" href="i - dut mmi.html">
-				 <img class="couverture" src="./RESSOURCES/Couverture_Jeu_Vidéo.jpg"/>
+				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"/>
+				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
 			</a>
 		</div>
 		
