--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="photomontage_bande">
 			<a class="lien_image" href="./html/photomontage.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"/>
-				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGES<span class="contour"> | </span></p>
+				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGE<span class="contour"> | </span></p>
 			</a>
 			 <a class="lien_image" href="i - dut mmi.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"/>
