--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<img class="couverture" src="./RESSOURCES/Couverture_Photomontage.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>PHOTOMONTAGE<span class="contour"> | </span></p>
 			</a>
-			 <a class="lien_image" href="i - dut mmi.html">
+			 <a class="lien_image" href="./html/3d.html">
 				 <img class="couverture" src="./RESSOURCES/Couverture_3D.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>3D<span class="contour"> | </span></p>
 			</a>
